--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,29 @@
 /*  your css code here. If applicable */
+
+.container{
+	width: 400px;
+	height: 200px;
+	background: #D3D3D2;
+	border: 2px solid black;
+	border-radius: 50px;
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+	text-align: center;
+}
+
+.light{
+	height: 100px;
+	width: 100px;
+	border-radius: 50%;
+}
+
+.green{
+	background: green;
+}
+.yellow{
+	background: yellow;
+}
+.red{
+	background: red;
+}
